# ci-cd-test

./: .gitmodules  Dockerfile  README.md  a.txt
.github/workflows/: build-image.yaml  ci.yaml  go.yaml
connectors/new-connector/: text.txt
connectors/source-sage/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml  report.html  resultado.xml  text.txt
connectors/source-wordpress/: README.md  acceptance-test-config.yml  docker-compose.yaml  main.py  metadata.yaml  pyproject.toml  wordpress_dump.sql
connectors/source-wordpress/integration_tests/: abnormal_state.json  acceptance.py  incremental_catalog.json  integration_test.py  invalid_config.json
connectors/source-wordpress/secrets/: config.json
connectors/source-wordpress/source_wordpress/: __init__.py  manifest.yaml  run.py  source.py
connectors/source-wordpress/source_wordpress/schemas/: POSTS.json
connectors/source-wordpress/unit_tests/: conftest.py  test_source.py
example/: .dockerignore  .mockery.yaml  Dockerfile  docker-compose.yaml  go.mod  go.sum
example/feed/: endpoints.go  grpc.go  http.go  http_test.go  kafka.go  logging.go  metrics.go  mock_feed_repository_test.go  mock_feed_service_test.go  mock_post_repository_test.go  service.go  service_test.go
example/repository/: gorm.go  repository.go
example/utils/: env.go
example/zilla/: zilla.yaml
manager/: .env  Dockerfile  ISSUES.md  README.md  docker-compose.yaml  go.mod  go.sum
manager/configs/: config.yaml  configs.go
manager/constants/: broker.go
manager/docs/: docs.go  open-api-schema.yaml
(+76 files in other folders)
